--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
   "devDependencies": {
     "vuepress": "^1.2.0",
     "vuepress-plugin-autobar": "github:boboidream/vuepress-bar"
+  },
+  "dependencies": {
+    "moment": "^2.24.0"
   }
 }
